--- a/assets/css/dataescolar.css
+++ b/assets/css/dataescolar.css
@@ -3,44 +3,18 @@ html {
 }
 
 body {
-	position: relative;
+	margin: 0;
 	font-family: Roboto, sans-serif;
-	min-height: 100vh;
-	max-width: 542px;
-	padding: 150px 2em 50px;
-	margin: auto;
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-	grid-gap: 1em;
-	grid-template-areas: 'header'
-											 'main'
-											 'footer';
 }
 
-body::before {
-	content: '';
-	position: fixed;
-	z-index: 999;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 75px;
-	background-image: url('../images/wave1.png');
-	background-size: 100% 75px;
-	background-repeat: no-repeat;
+select {
+	appearance: none;
+	-moz-appearance: none;
 }
 
-body::after {
-	content: '';
-	position: fixed;
-	z-index: 1000;
-	top: 75px;
-	left: calc((100vw - 525px) / 2);
-	width: 75px;
-	height: 75px;
-	background-image: url('../images/flower1.png');
-	background-size: contain;
-	background-repeat: no-repeat;
+input[type='number'] {
+	appearance: textfield;
+	-moz-appearance: textfield;
 }
 
 figure {
@@ -62,7 +36,6 @@ figcaption {
 figcaption img {
 	width: 1em;
 	height: 1em;
-	min-height: 1em !important;
 }
 
 a {
@@ -70,8 +43,64 @@ a {
 	text-decoration: none;
 }
 
+.app {
+	position: relative;
+	min-height: 100vh;
+	max-width: 542px;
+	padding: 100px 2em 50px;
+	margin: auto;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+	grid-gap: 1em;
+	grid-template-areas: 'header'
+											 'main'
+											 'footer';
+}
+
+.app::before {
+	content: '';
+	position: fixed;
+	z-index: 997;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 75px;
+	background-image: url('../images/wave1.png');
+	background-size: 100% 75px;
+	background-repeat: no-repeat;
+}
+
 .header {
 	grid-area: header;
+}
+
+.header__about-icon {
+	width: 40px;
+	height: 40px;
+	position: fixed;
+	z-index: 998;
+	right: 10px;
+	top: calc(50vh - 20px);
+	padding: 10px;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0 0 1em #E9E9E9;
+	border-radius: 1000px;
+	color: #8D8C89;
+	background: white;
+	border: 1px solid #E9E9E9;
+	transform: scale(1);
+	transition: 250ms transform;
+}
+
+.header__title {
+	font-family: cursive;
+}
+
+.header__about-icon:hover {
+	transform: scale(1.05) rotate(-.5deg);
 }
 
 .main {
@@ -90,6 +119,41 @@ a {
 
 .animated--zoom:hover {
 	transform: scale(1.05) rotate(-.5deg);
+}
+
+.nav {
+	display: flex;
+	min-height: 2em;
+}
+
+.nav__link {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100%;
+	background: transparent;
+	cursor: pointer;
+	padding: 1em;
+	border: none;
+	border-bottom: thick solid #dfdfdf;
+	transition: 250ms border-color, 250ms background;
+	text-align: center;
+	font-weight: bold;
+}
+
+.nav__link:hover {
+	border-bottom-color: #FBB5BD;
+	background: #FBB5BD;
+}
+
+.nav__link:last-child {
+	justify-self: flex-end;
+}
+
+.nav__link svg {
+	width: 1em;
+	height: 1em;
 }
 
 .nav__border {
@@ -174,31 +238,6 @@ a {
 
 .clock__day {
 	font-size: 1.25em;
-}
-
-.about-button {
-	width: 40px;
-	height: 40px;
-	position: fixed;
-	z-index: 998;
-	right: 10px;
-	top: calc(50vh - 20px);
-	padding: 10px;
-	box-sizing: border-box;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	box-shadow: 0 0 1em #E9E9E9;
-	border-radius: 1000px;
-	color: #8D8C89;
-	background: white;
-	border: 1px solid #E9E9E9;
-	transform: scale(1);
-	transition: 250ms transform;
-}
-
-.about-button:hover {
-	transform: scale(1.05) rotate(-.5deg);
 }
 
 .checkboxes {
