--- a/assets/css/dataescolar.css
+++ b/assets/css/dataescolar.css
@@ -1,508 +1,552 @@
 html {
-	scroll-behavior: smooth;
-	overflow-y: scroll !important;
+  scroll-behavior: smooth;
+  overflow-y: scroll !important;
 }
 
 body {
-	margin: 0;
-	font-family: Roboto, sans-serif;
+  margin: 0;
+  font-family: Roboto, sans-serif;
 }
 
 select {
-	appearance: none;
-	-moz-appearance: none;
+  appearance: none;
+  -moz-appearance: none;
 }
 
 input[type='number'] {
-	appearance: textfield;
-	-moz-appearance: textfield;
+  appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 figure {
-	margin: 0;
-	overflow: hidden;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+  margin: 0;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 figcaption {
-	font-weight: bold;
-	display: grid;
-	grid-template-columns: auto 1fr;
-	align-items: center;
-	grid-gap: 10px;
-	padding: 10px;
-	background: #FAF1F5;
-	color: #76726E;
+  font-weight: bold;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  grid-gap: 10px;
+  padding: 10px;
+  background: #faf1f5;
+  color: #76726e;
 }
 
 figcaption img {
-	width: 1em;
-	height: 1em;
+  width: 1em;
+  height: 1em;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .app {
-	position: relative;
-	min-height: 100vh;
-	max-width: 542px;
-	padding: 100px 2em 50px;
-	margin: auto;
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-	grid-gap: 1em;
-	grid-template-areas: 'header'
-											 'main'
-											 'footer';
+  position: relative;
+  min-height: 100vh;
+  max-width: 542px;
+  padding: 100px 2em 50px;
+  margin: auto;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-gap: 1em;
+  grid-template-areas: 'header'
+    'main'
+    'footer';
 }
 
 .app::before {
-	content: '';
-	position: fixed;
-	z-index: 997;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 75px;
-	background-image: url('../images/wave1.png');
-	background-size: 100% 75px;
-	background-repeat: no-repeat;
+  content: '';
+  position: fixed;
+  z-index: 997;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 75px;
+  background-image: url('../images/wave1.png');
+  background-size: 100% 75px;
+  background-repeat: no-repeat;
 }
 
 .header {
-	grid-area: header;
+  grid-area: header;
 }
 
 .header__about-icon {
-	width: 40px;
-	height: 40px;
-	position: fixed;
-	z-index: 998;
-	right: 10px;
-	top: calc(50vh - 20px);
-	box-sizing: border-box;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	box-shadow: 0 0 1em #E9E9E9;
-	border-radius: 1000px;
-	color: #8D8C89;
-	background: white;
-	border: 1px solid #E9E9E9;
-	transform: scale(1);
-	transition: 250ms transform;
-	cursor: pointer;
-	font-size: 1.5em;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  z-index: 998;
+  right: 10px;
+  top: calc(50vh - 20px);
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 1em #e9e9e9;
+  border-radius: 1000px;
+  color: #8d8c89;
+  background: white;
+  border: 1px solid #e9e9e9;
+  transform: scale(1);
+  transition: 250ms transform;
+  cursor: pointer;
+  font-size: 1.5em;
 }
 
 .header__about-icon svg {
-	width: 1em;
-	height: 1em;
+  width: 1em;
+  height: 1em;
 }
 
 .header__title {
-	font-family: system-ui;
-	font-size: 1.5em;
+  font-family: system-ui;
+  font-size: 1.5em;
 }
 
 .header__about-icon:hover {
-	transform: scale(1.05) rotate(-.5deg);
+  transform: scale(1.05) rotate(-0.5deg);
 }
 
 .header__separator {
-	border: 0;
-	height: 2em;
-	background: url('../images/flower2.png');
-	background-size: contain;
-	margin: 0;
+  border: 0;
+  height: 2em;
+  background: url('../images/flower2.png');
+  background-size: contain;
+  margin: 0;
 }
 
 .main {
-	grid-area: main;
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-	align-content: start;
-	grid-gap: 2em;
-	grid-auto-flow: dense;
+  grid-area: main;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  align-content: start;
+  grid-gap: 2em;
+  grid-auto-flow: dense;
 }
 
 .animated--zoom {
-	transform: scale(1);
-	transition: 250ms transform;
+  transform: scale(1);
+  transition: 250ms transform;
 }
 
 .animated--zoom:hover {
-	transform: scale(1.05) rotate(-.5deg);
+  transform: scale(1.05) rotate(-0.5deg);
 }
 
 .nav {
-	display: flex;
-	min-height: 2em;
+  display: flex;
+  min-height: 2em;
 }
 
 .nav__link {
-	flex: 1;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100%;
-	background: transparent;
-	cursor: pointer;
-	padding: 1em;
-	border: none;
-	border-bottom: thick solid #dfdfdf;
-	transition: 250ms border-color, 250ms background;
-	text-align: center;
-	font-weight: bold;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  background: transparent;
+  cursor: pointer;
+  padding: 1em;
+  border: none;
+  border-bottom: thick solid #dfdfdf;
+  transition: 250ms border-color, 250ms background;
+  text-align: center;
+  font-weight: bold;
 }
 
 .nav__link:hover {
-	border-bottom-color: #FBB5BD;
-	background: #FBB5BD;
+  border-bottom-color: #fbb5bd;
+  background: #fbb5bd;
 }
 
 .nav__link:last-child {
-	justify-self: flex-end;
+  justify-self: flex-end;
 }
 
 .nav__link svg {
-	width: 1em;
-	height: 1em;
+  width: 1em;
+  height: 1em;
 }
 
 .card {
-	transition: 250ms box-shadow;
-	font-size: .75em;
+  transition: 250ms box-shadow;
+  font-size: 0.75em;
 }
 
 .card__image {
-	width: 100%;
+  width: 100%;
 }
 
 .card__image--h100 {
-	height: 100%;
+  height: 100%;
 }
 
 .card:hover {
-	box-shadow: 0 0 10px #dfdfdf;
+  box-shadow: 0 0 10px #dfdfdf;
 }
 
 .card--2y {
-	grid-row: span 2;
+  grid-row: span 2;
 }
 
 .main > .card {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .main > .card img {
-	border-radius: 10px;
+  border-radius: 10px;
 }
 
 .cards {
-	grid-column: span 2;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 10px 2em;
+  grid-column: span 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px 2em;
 }
 
 .cards--3col {
-	grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .cards--4col {
-	grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .cards .card {
-	padding-bottom: 10px;
-	border-bottom: 1px solid #dfdfdf;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #dfdfdf;
 }
 
 .footer {
-	grid-area: footer;
-	padding: 1em 2em;
-	border-radius: 1em;
-	box-shadow: 0 0 1em lightgray;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-weight: light;
-	color: darkgray;
-	font-size: .9em;
-	text-align: center;
-	cursor: pointer;
+  grid-area: footer;
+  padding: 1em 2em;
+  border-radius: 1em;
+  box-shadow: 0 0 1em lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: light;
+  color: darkgray;
+  font-size: 0.9em;
+  text-align: center;
+  cursor: pointer;
+  transition: 250ms color;
+}
+
+.footer:hover {
+  color: black;
 }
 
 .clock {
-	width: 100%;
-	height: 100%;
-	color: #f5a9c4;
-	display: grid;
-	grid-template-rows: repeat(2, auto);
-	grid-gap: 10px;
-	place-content: center;
-	text-align: center;
-	font-weight: bold;
+  width: 100%;
+  height: 100%;
+  color: #f5a9c4;
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-gap: 10px;
+  place-content: center;
+  text-align: center;
+  font-weight: bold;
 }
 
 .clock__time {
-	font-size: 3.75em;
-	font-family: sans-serif;
-	font-stretch: condensed;
+  font-size: 3.75em;
+  font-family: sans-serif;
+  font-stretch: condensed;
 }
 
 .clock__day {
-	font-size: 1.25em;
+  font-size: 1.25em;
 }
 
 .checkboxes {
-	display: grid;
-	grid-gap: 1em;
-	padding: 2em 1em;
+  display: grid;
+  grid-gap: 1em;
+  padding: 2em 1em;
 }
 
 .checkboxes label {
-	display: grid;
-	grid-template-columns: auto 1fr;
-	align-items: center;
-	justify-content: start;
-	grid-gap: 1em;
-	cursor: pointer;
-	color: darkgray;
-	font-weight: bold;
-	font-size: 1em;
-	padding-bottom: 5px;
-	border-bottom: 1px solid currentColor;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  justify-content: start;
+  grid-gap: 1em;
+  cursor: pointer;
+  color: darkgray;
+  font-weight: bold;
+  font-size: 1em;
+  padding-bottom: 5px;
+  border-bottom: 1px solid currentColor;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 .checkbox__icon {
-	background-image: url('../icons/square-o.svg');
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	box-sizing: border-box;
-	width: 1.5em;
-	height: 1.5em;
+  background-image: url('../icons/square-o.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  width: 1.5em;
+  height: 1.5em;
 }
 
 .checkboxes label:hover .checkbox__icon {
-	box-shadow: 0 0 5px currentColor;
+  box-shadow: 0 0 5px currentColor;
 }
 
 .checkboxes [type="checkbox"] {
-	display: none;
+  display: none;
 }
 
 .checkboxes [type="checkbox"]:checked ~ .checkbox__icon {
-	background-image: url('../icons/check-square-o.svg');
+  background-image: url('../icons/check-square-o.svg');
 }
 
 [data-pushbar-id="sidebar"] {
-	overflow-y: scroll;
-	border-left: 10px solid #FBB5BD;
+  overflow-y: scroll;
+  border-left: 10px solid #fbb5bd;
 }
 
 .menu {
-	padding: 1em 0;
-	user-select: none;
-	-moz-user-select: none;
-	-webkit-user-select: none;
+  padding: 1em 0;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 
 .menu__text {
-	padding: 1em;
-	font-weight: bold;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	position: relative;
-	transition: 250ms border-color, 250ms background-color;
-	box-sizing: border-box;
+  padding: 1em;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  position: relative;
+  transition: 250ms border-color, 250ms background-color;
+  box-sizing: border-box;
 }
 
 .menu__text::after {
-	content: url('../icons/chevron-right.svg');
-	width: 10px;
-	position: absolute;
-	right: 5%;
-	top: calc(50% - .5em);
-	transition: 250ms transform;
+  content: url('../icons/chevron-right.svg');
+  width: 10px;
+  position: absolute;
+  right: 5%;
+  top: calc(50% - 0.5em);
+  transition: 250ms transform;
 }
 
 .menu__text--no-arrow::after {
-	display: none;
+  display: none;
 }
 
 .menu__submenu {
-	padding: 0;
-	height: 0;
-	box-sizing: border-box;
-	transition: 250ms height, 250ms padding-top, 250ms padding-bottom;
-	overflow: hidden;
-	font-weight: bold;
+  padding: 0;
+  height: 0;
+  box-sizing: border-box;
+  transition: 250ms height, 250ms padding-top, 250ms padding-bottom;
+  overflow: hidden;
+  font-weight: bold;
 }
 
 .menu__submenu-item {
-	display: block;
-	cursor: pointer;
+  display: block;
+  cursor: pointer;
 }
 
 .menu__submenu-item > a {
-	display: flex;
-	padding: .5em 0;
-	border-top: medium solid transparent;
-	border-bottom: medium solid transparent;
-	transition: 250ms border-color;
+  display: flex;
+  padding: 0.5em 0;
+  border-top: medium solid transparent;
+  border-bottom: medium solid transparent;
+  transition: 250ms border-color;
 }
 
 .menu__submenu-item > a:hover {
-	border-bottom-color: #FBB5BD;
+  border-bottom-color: #fbb5bd;
 }
 
 details[open] > .menu__submenu {
-	padding: .75em 1em .75em 1.5em;
-	height: auto;
-	box-sizing: border-box;
+  padding: 0.75em 1em 0.75em 1.5em;
+  height: auto;
+  box-sizing: border-box;
 }
 
 details[open] > summary::after {
-	transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 details[open] > .menu__text,
 .menu__link:hover > .menu__text {
-	background: #FBB5BD;
+  background: #fbb5bd;
 }
 
 details[open] {
-	background: #fde1e4;
+  background: #fde1e4;
 }
 
 .form {
-	display: grid;
-	grid-gap: 1em;
+  display: grid;
+  grid-gap: 1em;
 }
 
 .form__group {
-	display: grid;
-	grid-gap: 1.5em;
-	padding: 0 1em 1em;
-	border-radius: 10px;
-	transition: 100ms border-color;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  display: grid;
+  grid-gap: 1.5em;
+  padding: 0 1em 1em;
+  border-radius: 10px;
+  transition: 100ms border-color;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .form__group:hover {
-	border-color: #f44b5f;
+  border-color: #f44b5f;
 }
 
 .form__group-legend {
-	font-weight: bold;
-	padding: 0 1em;
-	transition: 100ms color;
+  font-weight: bold;
+  padding: 0 1em;
+  transition: 100ms color;
 }
 
 .form__group:hover .form__group-legend {
-	color: #f44b5f;
+  color: #f44b5f;
 }
 
-.input, .select {
-	width: 100%;
-	padding: .5em;
-	box-sizing: border-box;
-	transition: 100ms border-color;
-	padding-right: 2em;
-	cursor: write;
-	border: thin solid lightgray;
-	border-radius: 5px;
-	height: 45px;
-	order: 2;
+.input,
+.select {
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+  transition: 100ms border-color;
+  padding-right: 2em;
+  cursor: write;
+  border: thin solid lightgray;
+  border-radius: 5px;
+  height: 45px;
+  order: 2;
 }
 
 .input-group {
-	display: grid;
-	grid-gap: .5em;
+  display: grid;
+  grid-gap: 0.5em;
 }
 
 .input__label {
-	transition: 100ms color, 100ms top, 100ms transform;
-	padding: 0 1em;
-	order: 1;
+  transition: 100ms color, 100ms top, 100ms transform;
+  padding: 0 1em;
+  order: 1;
 }
 
 .input-group--animate {
-	margin-top: 1.75em;
+  margin-top: 1.75em;
 }
 
 .input-group--animate .input__label {
-	position: absolute;
-	left: 0;
-	top: calc(50% - .75em);
+  position: absolute;
+  left: 0;
+  top: calc(50% - 0.75em);
 }
 
 .input-group--animate .input {
-	border: none;
-	height: 100%;
+  border: none;
+  height: 100%;
 }
 
 .input-group--animate {
-	position: relative;
-	display: block;
-	height: 45px;
-	border: thin solid lightgray;
-	box-sizing: border-box;
-	border-radius: 5px;
+  position: relative;
+  display: block;
+  height: 45px;
+  border: thin solid lightgray;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .input-group:hover .input__label {
-	color: #f44b5f;
+  color: #f44b5f;
 }
 
 .input-group--animate .input:focus ~ .input__label {
-	top: calc(50% - 2em);
-	background: white;
-	transform: scale(.75);
+  top: calc(50% - 2em);
+  background: white;
+  transform: scale(0.75);
 }
 
 .select-container {
-	position: relative;
-	order: 2;
+  position: relative;
+  order: 2;
 }
 
 .select-container::before {
-	content: url('../icons/chevron-right.svg');
-	width: .75em;
-	height: .75em;
-	position: absolute;
-	right: 1em;
-	top: calc(50% - .5em);
-	transition: 100ms top, 250ms transform;
+  content: url('../icons/chevron-right.svg');
+  width: 0.75em;
+  height: 0.75em;
+  position: absolute;
+  right: 1em;
+  top: calc(50% - 0.5em);
+  transition: 100ms top, 250ms transform;
 }
 
 .select-container:hover::before {
-	transform: rotate(90deg) translateX(.25em);
+  transform: rotate(90deg) translateX(0.25em);
 }
 
-.input:focus, .input:hover, .select:focus, .select:hover {
-	border-color: #FBB5BD;
+.select-container--simple::before {
+  content: unset;
+}
+
+.select-container--simple {
+  height: auto;
+}
+
+.select-container--simple .select {
+  height: auto;
+}
+
+.button {
+  width: 100%;
+  margin: auto;
+  padding: 1em;
+  box-sizing: border-box;
+  background: #fbb5bd;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 1em;
+  transition: 250ms background, 250ms color;
+}
+
+.button:hover {
+  background: #f44b5f;
+  color: white;
+}
+
+.button--half {
+  width: 50%;
+}
+
+.input:focus,
+.input:hover,
+.select:focus,
+.select:hover {
+  border-color: #fbb5bd;
 }
 
 @media (max-width: 410px) {
-	.main {
-		grid-template-columns: 1fr;
-	}
+  .main {
+    grid-template-columns: 1fr;
+  }
 
-	.cards {
-		grid-template-columns: 1fr;
-	}
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
