--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,108 +1,116 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	text-decoration: none;
-	font-family: sans-serif;
-}
-
 body {
+  margin: 0;
+  min-height: 100vh;
+  display: grid;
+  align-items: center;
 	background-image: url('../images/logo.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
+
+  --primary: #fe77a4;
+  --primary-opacity: #fe77a499;
 }
 
-main {
-	box-sizing: border-box;
-	width: 100%;
-	padding: 20px;
-	margin: auto;
-	margin-top: 100px;
+input[type="number"] {
+  appearance: textfield;
+  -moz-appearance: textfield;
 }
 
-.contenedor__todo {
-	width: 100%;
-	max-width: 800px;
-	margin: auto;
+.container {
+  margin: auto;
+  width: 80%;
 	position: relative;
+
+  --radius: 20px;
 }
 
-.caja__trasera {
-	box-sizing: border-box;
-	width: 100%;
-	padding: 10px 20px;
+.container__backdrop {
+	padding: 10px 0;
 	display: flex;
 	justify-content: center;
 	backdrop-filter: blur(10px);
-	background-color: rgba(255, 0, 255, 0.61);
+	background-color: var(--primary-opacity);
+  border-radius: var(--radius);
 }
 
-.caja__trasera div {
-	margin: 100px 40px;
+.container__backdrop > div {
+	padding: 60px;
 	color: white;
-	transition: all 500ms;
 }
 
-.caja__trasera div p,
-.caja__traser div button {
-	margin-top: 30px;
-}
-
-.caja__trasera div h3 {
-	font-weight: 400;
-	font-size: 26px;
-}
-
-.caja__trasera button {
+.button {
 	padding: 10px 40px;
-	border: 2px solid #fff;
+  border: medium solid transparent;
 	background: transparent;
-	font-size: 14px;
-	font-weight: 600;
 	cursor: pointer;
-	color: white;
 	outline: none;
-	transition: all 300ms;
+	transition: color 300ms, background 300ms, border-color 300ms;
+  font-size: 1em;
+  font-weight: bold;
 }
 
-.caja__trasera .caja__trasera button:hover {
-	background: #fff;
-	color: #46A2FD;
+.button--block {
+  width: 100%;
 }
 
-/* Formularios */
-.contenedor__login-register {
+.button--outline-white {
+  color: white;
+  border-color: white;
+}
+
+.button--outline-white:hover {
+	background: white;
+	color: var(--primary);
+}
+
+.button--primary {
+  background: var(--primary);
+  color: white;
+}
+
+.button--primary:hover {
+  background: white;
+  color: var(--primary);
+  border-color: var(--primary);
+}
+
+.button--margin {
+  margin: 2em 0;
+}
+
+.forms {
 	display: flex;
 	align-items: center;
-	width: 100%;
-	max-width: 380px;
+	max-width: 50%;
 	position: relative;
-	top: -185px;
-	left: 10px;
-	/* La transicion va despues del codigo JS */
-	transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+  transform: translate(3%, -25vh);
+	transition: transform 500ms cubic-bezier(.175, .885, .320, 1.275);
 }
 
-.contenedor__login-register form {
-	box-sizing: border-box;
-	width: 100%;
-	padding: 80px 20px;
+.forms__form {
 	background: white;
 	position: absolute;
-	border-radius: 20px;
+	border-radius: var(--radius);
+  padding: 1em;
+  display: none;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
-.contenedor__login-register form h2 {
-	font-size: 30px;
+.forms__form--active {
+  display: block;
+}
+
+.forms__title {
+	font-size: 2em;
 	text-align: center;
-	margin-bottom: 20px;
-	color: #fd4683bb;
+	color: var(--primary);
 }
 
-.contenedor__login-register form input,
-.contenedor__login-register form select {
+.forms__input,
+.forms__select {
 	width: 100%;
 	margin-top: 20px;
 	padding: 10px;
@@ -110,18 +118,7 @@ main {
 	background: #F2F2F2;
 	font-size: 16px;
 	outline: none;
-}
-
-.contenedor__login-register form button {
-	padding: 10px 40px;
-	margin-top: 40px;
-	border: none;
-	font-size: 14px;
-	background:  #fd4683bb;
-	font-weight: 600;
-	cursor: pointer;
-	color: white;
-	outline: none;
+  box-sizing: border-box;
 }
 
 .formulario__login {
@@ -138,26 +135,19 @@ main {
 		margin-top: 50px;
 	}
 
-	.caja__trasera {
+	.container__backdrop {
 		max-width: 350px;
 		height: 300px;
 		flex-direction: column;
 		margin: auto;
 	}
 
-	.caja__trasera div {
+	.container__backdrop div {
 		margin: 0;
 		position: absolute;
 	}
 
-	/* Formularios */
-	.contenedor__login-register {
-		top: -10px;
-		left: -5px;
-		margin: auto;
-	}
-
-	.contenedor__login-register form {
+	.forms__form {
 		position: relative;
 	}
 }
